initial card completed

--- a/index.html
+++ b/index.html
@@ -13,7 +13,19 @@
 </head>
 
 <body>
+  <header>
+    <img src="./assets/logo-copa.svg" alt="Logo da NLW copa">
+  </header>
 
+  <div class="card" onclick="cardChange()" >
+    <img src="https://avatars.githubusercontent.com/u/51412278?v=4" alt="Imagem de perfil">
+    <div class="info">
+      <h1>Murilo Calmon</h1>
+      <p>Student</p>
+    </div>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 
 </html>
